posiGen_FullsendBox/src/objects/New_Hire__c.object
<CustomObject>
    <fields>
        <fullName>Accounting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accounting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Monitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Monitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Churn__c</fullName>
        <formula>IF(ISBLANK(DOA_Date__c), (today() -  Date_of_Hire__c) + 45, DOA_Date__c -  Date_of_Hire__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Churn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Computer__c</fullName>
        <label>Computer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surface</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOA_Date__c</fullName>
        <label>DOA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Dead on arrival.  Choose this if hire stops before they start.</inlineHelpText>
        <label>DOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Hire__c</fullName>
        <label>Date of Hire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Desk_Phone_Number__c</fullName>
        <label>Desk Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Doc_Control__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Doc Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Docusign_Account_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Docusign Account Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Docusign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Docusign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Groups__c</fullName>
        <label>Email Groups</label>
        <picklist>
            <picklistValues>
                <fullName>A/P Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albany Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Careers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT ISS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doc Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Halfmoon Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Houma Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA ISS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakeland Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metairie Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE Field Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO East Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East PMs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY ISS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Equipment_Notes__c</fullName>
        <label>Equipment Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Order_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equipment Order Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Headset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Laptop_Dock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Laptop Dock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Groups__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Groups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Albany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridgeport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Halfmoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakeland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metairie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michoud</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MS_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MS Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Hires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone_Number__c</fullName>
        <label>Mobile Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Board__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Board</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Operations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Software__c</fullName>
        <label>Other Software</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP Sales/Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Installation Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permits Coordinator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ready_to_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready to Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Login_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce Login Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <label>New Hire</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Position__c</columns>
        <columns>Date_of_Hire__c</columns>
        <columns>Department__c</columns>
        <columns>Location__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Manager__c</columns>
        <columns>Equipment_Order_Complete__c</columns>
        <columns>Salesforce_Login_Created__c</columns>
        <columns>DOA__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Docusign_Required</fullName>
        <columns>Date_of_Hire__c</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Position__c</columns>
        <columns>Department__c</columns>
        <columns>Location__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Manager__c</columns>
        <columns>Docusign_Account_Created__c</columns>
        <columns>Equipment_Order_Complete__c</columns>
        <columns>Salesforce_Login_Created__c</columns>
        <columns>DOA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DOA__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Position__c</field>
            <operation>equals</operation>
            <value>Outside Sales Rep</value>
        </filters>
        <filters>
            <field>Docusign_Account_Created__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Docusign Required</label>
    </listViews>
    <listViews>
        <fullName>Equipment_Required</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Position__c</columns>
        <columns>Date_of_Hire__c</columns>
        <columns>Department__c</columns>
        <columns>Location__c</columns>
        <columns>Manager__c</columns>
        <columns>Computer__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Password__c</columns>
        <columns>Headset__c</columns>
        <columns>Laptop_Dock__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>Equipment_Order_Complete__c</columns>
        <columns>Salesforce_Login_Created__c</columns>
        <columns>DOA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DOA__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Equipment_Order_Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Computer__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Mobile_Phone__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Equipment Required</label>
    </listViews>
    <listViews>
        <fullName>Pending</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Position__c</columns>
        <columns>Date_of_Hire__c</columns>
        <columns>Department__c</columns>
        <columns>Location__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Manager__c</columns>
        <columns>Equipment_Order_Complete__c</columns>
        <columns>Salesforce_Login_Created__c</columns>
        <columns>DOA__c</columns>
        <columns>On_Board__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DOA__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Salesforce_Login_Created__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Equipment_Order_Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>On_Board__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Pending</label>
    </listViews>
    <listViews>
        <fullName>Salesforce_Required</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Position__c</columns>
        <columns>Date_of_Hire__c</columns>
        <columns>Department__c</columns>
        <columns>Location__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Manager__c</columns>
        <columns>Equipment_Order_Complete__c</columns>
        <columns>Salesforce_Login_Created__c</columns>
        <columns>DOA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DOA__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Salesforce__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Salesforce_Login_Created__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Salesforce Required</label>
    </listViews>
    <nameField>
        <label>New Hire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Hires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>